# Traffic-Signs-3D-Pipeline

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
configs/: pointnext-b.yaml
scripts/: generate_synthetic_dataset.py
src/ts3d/: __init__.py
src/ts3d/cli/: __main__.py  eval.py  train.py
src/ts3d/config/: __init__.py  loader.py  schemas.py
src/ts3d/data/: __init__.py  collate.py  dataset.py  io.py  metadata.py  transforms.py
src/ts3d/evaluation/: __init__.py  evaluator.py  fp_analysis.py  metrics.py  thresholding.py
src/ts3d/models/: __init__.py  base.py  registry.py
src/ts3d/models/pointnext/: __init__.py  backbone.py  classifier.py
src/ts3d/training/: __init__.py  callbacks.py  losses.py  optim.py  tracking.py  trainer.py
src/ts3d/utils/: __init__.py  logging.py  paths.py  seed.py
tests/: conftest.py
tests/integration/: test_dataset.py  test_pointnext_smoke.py
tests/unit/: test_collate.py  test_config.py  test_metadata.py  test_metrics.py  test_transforms.py
