[project]
name = "traffic-signs-3d-pipeline"
version = "0.1.0"
description = "3D point-cloud verification of traffic sign candidates with PointNeXt for false-positive reduction in an automated traffic sign extraction pipelines."
readme = "README.md"
requires-python = ">=3.10,<3.14"
authors = [{ name = "rnmnk" }]
license = { text = "MIT" }

dependencies = [
    "numpy>=1.26,<3",
    "scipy>=1.11",
    "pandas>=2.1",
    "laspy[lazrs]>=2.5",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "typer>=0.12",
    "structlog>=24.1",
    "rich>=13.7",
    "tqdm>=4.66",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "mlflow>=2.14",
    "torch>=2.2",
    "pre-commit>=4.6.0",
    "codespell>=2.4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML",
    "types-tqdm",
]

[project.scripts]
ts3d = "ts3d.cli.__main__:app"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ts3d"]

[tool.hatch.build.targets.sdist]
include = ["src/ts3d", "README.md", "pyproject.toml"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",     # pycodestyle / pyflakes
    "I",               # isort
    "B",               # bugbear
    "UP",              # pyupgrade
    "N",               # pep8-naming
    "SIM",             # simplify
    "RUF",
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"src/ts3d/cli/*.py" = ["B008"]  # typer.Option(...) in defaults is idiomatic

[tool.ruff.lint.isort]
known-first-party = ["ts3d"]

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "src"
explicit_package_bases = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
pythonpath = ["src"]
